<resources>
    <string name="app_name">Snake</string>
    <string name="final_score">Final Score: %d pts</string>
    <string name="current_score">Score: %d</string>
    <string name="game_over">Game over</string>
    <string name="restart">Restart</string>
    <string name="main_menu">Main Menu</string>
    <string name="snake">Snake</string>
    <string name="start">Start</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="top_players">Top players</string>
    <string name="name">Name</string>
    <string name="rank">Rank</string>
    <string name="score">Score</string>
    <string name="current_time">Time: %ds</string>
    <string name="time">Time</string>
    <string name="reset_scores">Reset scores</string>
    <string name="back_to_menu">Back to menu</string>
</resources>