<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/grass_green"
    tools:context=".activities.EndGameActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/game_over"
        android:textColor="@color/dark_gray"
        android:textSize="50sp"
        android:layout_marginBottom="10dp"

        />

    <TextView
        android:id="@+id/tvFinalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/final_score"
        android:textColor="@color/dark_gray"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/btnPlayAgain"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:text="@string/restart" />


    <Button
        android:id="@+id/btnMainMenu"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:text="@string/main_menu"/>

</LinearLayout>