<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ScoreBoardActivity"
    android:background="@color/grass_green"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/top_players"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:layout_marginHorizontal="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rank"
            android:textColor="@color/dark_gray"
            android:textSize="22sp"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/dark_gray"
            android:textSize="22sp"
            android:layout_weight="2"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textColor="@color/dark_gray"
            android:textSize="22sp"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/dark_gray"
            android:textSize="22sp"
            android:layout_weight="1"
            android:gravity="center"/>


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/scoreboard_item" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_margin="20dp">

        <Button
            android:id="@+id/btnBackToMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:text="@string/back_to_menu"
            android:layout_weight="1"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/btnResetScores"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:text="@string/reset_scores"
            android:layout_margin="10dp"/>

    </LinearLayout>

</LinearLayout>