<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/grass_green"
    tools:context=".activities.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/snake"
        android:textColor="@color/dark_gray"
        android:textSize="70sp" />

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:text="@string/start" />

    <Button
        android:id="@+id/btnScoreBoard"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:text="@string/scoreboard"/>

</LinearLayout>